--- a/.env.example
+++ b/.env.example
@@ -19,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+# DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+# DB_DATABASE=u319245353_db_cd_app
+# DB_USERNAME=u319245353_u_cd_app
+# DB_PASSWORD=@r+@_b@g0ng_P1l1p1n@s
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
