--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "apexcharts": "^3.50.0",
+        "canvas-confetti": "^1.9.3",
         "chart.js": "^4.4.3",
         "gulp": "^5.0.0",
         "react-apexcharts": "^1.4.1",
