add chatbot controller, update homepage, remove confetti

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "canvas-confetti": "^1.9.3",
         "chart.js": "^4.4.3",
         "gulp": "^5.0.0",
+        "openai": "^4.70.2",
         "react-apexcharts": "^1.4.1",
         "react-chartjs-2": "^5.2.0"
     },
